--- a/action.yml
+++ b/action.yml
@@ -21,4 +21,4 @@ runs:
           branch=$(echo $${{ github.ref }} | tr '[:upper:]' '[:lower:]')
         fi
         branch=$(echo $branch |  tr -d '[:space:]' )
-        echo "{branch}=${{ $(basename $branch) }}"
+        echo "{branch}={ $(basename $branch) }"
